--- a/common/Makefile.common
+++ b/common/Makefile.common
@@ -98,3 +98,10 @@ stop:
 rm:
 	docker container rm $(CONTAINER_NAME)
 
+# イメージの pull
+pull:
+	docker image pull $(IMAGE_NAME)
+
+# イメージの push
+push:
+	docker image push $(IMAGE_NAME)
